Make sure marker appears properly on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -150,3 +150,6 @@ span.colour {
 #colour-triangle {
   cursor: pointer;
 }
+.md-dialog-content map {
+  display: block;
+}
